2011-11-12  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, doc/gputils.lyx:
    added support for pic 14 bit enhanced devices supported by mpasmx 5.42,
    thanks to Gal Zsolt.
  * libgputils/gpprocessor.c, header/p12f683.inc, lkr/12f683.lkr: :
    fixed bug #2822266: TMR1GE bit missing for T1CON on 12f683
    12f683 lkr and inc files updated to mpasmx 5.42 version

2011-11-11  Borut Razem  <borutr@users.sourceforge.net>
  * doc/gputils.lyx, configure.ac, configure: version changed to 0.14.1
  * doc/gputils.lyx: listed all enhanced 14 bit devices supported by MPASM 5.43

2011-11-10  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/coff.c, libgputils/gpwriteobj.c: SHADOW support fixes
  * gplink/script.c: shadow option re-enabled

2011-11-08  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c:
    added support for all pic 14 bit enhanced devices supported by MPASM 5.43,
    thanks to Gal Zsolt.
  * gplink/script.c: shadow option temporarily disabled

2011-10-28  Borut Razem  <borutr@users.sourceforge.net>
  * gputils/gpdasm.c, libgputils/gpopcode.c, libgputils/gpopcode.h,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h:
    introduced --strict gpdasm command line option
  * doc/gputils.lyx: documented --strict gpdasm command line option
  * gpasm/testsuite/test:
    added disassemble and reassemble the assembled hex file test

2011-10-28  Borut Razem  <borutr@users.sourceforge.net>
  * gputils-0.14.0 released

2011-10-28  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpdis.c: fixed INSN_CLASS_LIT20 and movwi, moviw disassembly
  * libgputils/gpreadhex.c: fixed reading inhx32 segment line

2011-10-24  Borut Razem  <borutr@users.sourceforge.net>
  * README, gplink/gplink.h, gputils/gplib.h, gputils/gpvc.h, gputils/gpdasm.h,
    gputils/gpvo.h, gputils/gpstrip.h, gpasm/gpasm.h:
    gputils is not ALPHA nor BETA software any more ;-)
  * AUTHORS: added Borut, '@' replaced with '.AT.'