@@ -45,8 +45,7 @@ LKR_FILES =\
 	12f635.lkr \
 	12f675i.lkr \
 	12f675.lkr \
-	12f683i.lkr \
-	12f683.lkr \
+	12f683_g.lkr \
 	12hv609i.lkr \
 	12hv609.lkr \
 	12hv615i.lkr \
